<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="15dp">

        <TextView
            android:id="@+id/tvDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/adddialog_dialog_title"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:text="@string/adddialog_dialog_task_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:id="@+id/tvDialogContent"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_primarybg"
            android:layout_below="@+id/tvDialogContent"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/adddialog_dialog_task_tv"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:singleLine="true" />

        <TextView
            android:text="@string/adddialog_dialog_category_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/tvCategory"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/etTitle"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:id="@+id/spinnerCategory"
            android:layout_below="@+id/tvCategory"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/adddialog_dialog_importancy_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/tvImportancy"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/spinnerCategory"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/spinner_content"
            android:layout_below="@+id/tvImportancy"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:text="@string/adddialog_dialog_repeat_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/tvMax"
            android:textColor="@color/colorPrimary"
            android:layout_below="@+id/spinner_content"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/etMax"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edittext_primarybg"
            android:layout_marginTop="10dp"
            android:hint="@string/adddialog_dialog_repeat_tv"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:layout_below="@+id/tvMax"
            android:layout_alignParentStart="true"
            android:inputType="number" />

        <Button
            android:layout_below="@+id/etMax"
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/adddialog_dialog_add_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:scaleType="fitCenter"
            android:background="@drawable/primary_button_bg"
            android:textColor="@color/colorLoginWhite"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/adddialog_dialog_back_button"
            android:scaleType="fitCenter"
            android:background="@drawable/primary_button_bg"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorLoginWhite"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/deleteButton" />

    </RelativeLayout>


</RelativeLayout>