<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_wish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ulnamsong.todolist.com.ulnamsong.todolist.Activity.MainWishActivity"
    tools:showIn="@layout/app_bar_main_wish">

    <android.support.v7.widget.RecyclerView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/recyclerView"
        android:layout_marginBottom="25dp">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginRight="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/importancy_horizontal"
            android:id="@+id/imageView2"
            android:layout_weight="1.2"
            android:scaleType="fitXY"
            android:backgroundTint="@color/colorImportancyHigh"
            android:tint="@color/colorImportancyHigh"
            android:layout_gravity="center_vertical"
            android:layout_height="13dp" />

        <TextView
            android:text="@string/importance_high"
            android:layout_width="match_parent"
            android:id="@+id/tv_bot1"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:paddingLeft="2dp"
            android:textSize="12sp"
            android:layout_height="15dp" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/importancy_horizontal"
            android:id="@+id/imageView3"
            android:layout_weight="1.2"
            android:scaleType="fitXY"
            android:tint="@color/colorImportancyRegular"
            android:layout_gravity="center_vertical"
            android:layout_height="13dp" />

        <TextView
            android:text="@string/importance_medium"
            android:layout_width="match_parent"
            android:id="@+id/tv_bot2"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:paddingLeft="2dp"
            android:textSize="12sp"
            android:layout_height="15dp" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/importancy_horizontal"
            android:id="@+id/imageView4"
            android:layout_weight="1.2"
            android:scaleType="fitXY"
            android:tint="@color/colorImportancyLow"
            android:layout_gravity="center_vertical"
            android:layout_height="13dp" />

        <TextView
            android:text="@string/importance_low"
            android:layout_width="match_parent"
            android:id="@+id/tv_bot3"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:paddingLeft="2dp"
            android:textSize="12sp"
            android:layout_height="15dp" />

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/importancy_horizontal"
            android:id="@+id/imageView5"
            android:layout_weight="1.2"
            android:scaleType="fitXY"
            android:tint="@color/colorImportancyFinished"
            android:layout_gravity="center_vertical"
            android:layout_height="13dp" />

        <TextView
            android:text="@string/importance_finish"
            android:layout_width="match_parent"
            android:id="@+id/tv_bot4"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:paddingLeft="2dp"
            android:textSize="12sp"
            android:layout_height="15dp" />
    </LinearLayout>

</RelativeLayout>
